--- a/11 - Bootstrap v4/index.html
+++ b/11 - Bootstrap v4/index.html
@@ -7,22 +7,40 @@
     <title>Bootstrap</title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <style type="text/css">
-        .row [class^=col-], .row .col{
-            background-color: #ddd;
-            border: 1px solid #ccc;
+        .avatar {
+            width: 50px;
+            height: 50px;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="row">
-            <div class="col order-3">Primeira</div>
-            <div class="col">Segunda</div>
-            <div class="col">Terceira</div>
-            <div class="col order-1">Quarta</div>
-            <div class="col">Quinta</div>
-        </div>
+        <ul class="list-unstylied">
+            <div class="media">
+                <img src="assets/images/foto-perfil.jpg" class="mr-3 avatar align-self-center">
+                <div class="media-body">
+                    <h5>Algum tipo de titulo</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+            </div>
+            <div class="media">
+                <img src="assets/images/foto-perfil.jpg" class="mr-3 avatar align-self-center">
+                <div class="media-body">
+                    <h5>Algum tipo de titulo</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+            </div>
+            <div class="media">
+                <img src="assets/images/foto-perfil.jpg" class="mr-3 avatar align-self-center">
+                <div class="media-body">
+                    <h5>Algum tipo de titulo</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+            </div>    
+        </ul>
+        
     </div>
+    
     <script type="text/javascript" src="assets/js/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
