--- a/14 - Jquery/Ajax_completa/index.html
+++ b/14 - Jquery/Ajax_completa/index.html
@@ -14,9 +14,19 @@
     </style>
 </head>
 <body>
-    <div class="div"></div>
+    <form method="POST" id="form">
+        Número1: <br>
+        <input type="text" name="numero1"> <br><br>
 
-    <button>Ação</button>
+        Número2: <br>
+        <input type="text" name="numero2"> <br><br>
+
+        <input type="submit" value="Calcular">
+    </form>
+
+    <div class="div" id="div"></div>
+
+    
 
     <!-- Importando Jquery 3.4.1 -->
     <script type="text/javascript" src="../assets/js/jquery-3.4.1.min.js"></script>
