--- a/14 - Jquery/Ajax_serialize/index.html
+++ b/14 - Jquery/Ajax_serialize/index.html
@@ -14,6 +14,16 @@
     </style>
 </head>
 <body>
+    <form method="POST" id="form">
+        Usuário: <br>
+        <input type="text" name="usuario"> <br><br>
+
+        Senha: <br>
+        <input type="password" name="senha"> <br><br>
+
+        <input type="submit" value="Entrar">
+    </form>
+
     <div class="div"></div>
 
     <button>Ação</button>
